Fix: input class
Co-authored-by: João Miguel Nogueira <Dageus@users.noreply.github.com>
Co-authored-by: SalvadorCorreia <SalvadorCorreia@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       .key {
         position: relative;
         display: inline-block;
-        padding: 4px;
+        padding: 5px;
+        width: 60px;
+        image-rendering: pixelated;
       }
     </style>
   </head>
