--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
           src="./Digit6-KeyNotPressed.png"
           alt="key-pressed"
         />
+        <img
+        id="Digit7"
+        class="key"
+        src="./Digit7-KeyNotPressed.png"
+        alt="key-pressed"
+        />
       </div>
       <div>
         <img
@@ -74,7 +80,9 @@
           class="key"
           src="./KeyA-KeyNotPressed.png"
           alt="key-pressed"
-        />
+          />
+      </div>
+      <div>
         <img
           id="KeyW"
           class="key"
@@ -87,6 +95,7 @@
           src="./KeyS-KeyNotPressed.png"
           alt="key-pressed"
         />
+      </div>
         <img
           id="KeyE"
           class="key"
@@ -98,6 +107,19 @@
           class="key"
           src="./KeyD-KeyNotPressed.png"
           alt="key-pressed"
+        />
+        <div>
+        <img
+        id="KeyR"
+        class="key"
+        src="./KeyR-KeyNotPressed.png"
+        alt="key-pressed"
+        />
+        <img
+        id="KeyF"
+        class="key"
+        src="./KeyF-KeyNotPressed.png"
+        alt="key-pressed"
         />
       </div>
     </div>
