--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
         width: 60px;
         image-rendering: pixelated;
       }
+      #cameraID {
+        position: fixed;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 10px;
+        border-radius: 5px;
+        }
     </style>
   </head>
 
   <body>
+    <div id="cameraID"></div>
     <div class="container">
       <div>
         <img
